--- a/test_page.html
+++ b/test_page.html
@@ -61,7 +61,7 @@
                     <li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobiri.se">NOVEL TUTORIALS</a>
                     </li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="test_page.html">Test Page</a></li></ul>
                 
-                <div class="mbr-section-btn"><a class="btn btn-danger display-7" href="https://mobiri.se">Test</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-danger display-7" href="https://iotvlogs.github.io/">Test</a></div>
                 <div class="tel-menu">
                     <p class="mbr-text mbr-fonts-style display-7">&nbsp;</p>
                 </div>
