create github pages

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/iv-logo-word-screen-shot-2023-02-05-at-3.37.42-pm-128x128-2.webp" alt="Mobirise" style="height: 7.6rem;">
+                        <img src="assets/images/iv-logo-word-screen-shot-2023-02-05-at-3.37.42-pm-128x128-2.webp" alt="Mobirise" style="height: 6.7rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-4" href="index.html">IoT Vlogs</a></span>
@@ -83,7 +83,7 @@
     <div class="align-center container">
         <div class="row justify-content-center">
             <div class="col-12 col-lg-12">
-                <h1 class="mbr-section-title mbr-fonts-style align-center display-1">IoT Vlogs website is under construction.<br></h1>
+                <h1 class="mbr-section-title mbr-fonts-style align-center display-2">IoT Vlogs website is under construction.<br></h1>
                 <h2 class="mbr-section-subtitle mbr-fonts-style align-center display-7">Thanks for your patience.</h2>
                 
             </div>
@@ -159,10 +159,10 @@
         <div class="row justify-content-center">
             <div class="col-12 col-lg-5 col-text">
                 <div class="text-wrapper">
-                    <p class="label-text mbr-fonts-style align-left display-5">
+                    <p class="label-text mbr-fonts-style align-left display-4">
                         <span>QUESTIONS &amp; ANSWERS</span>
                     </p>
-                    <h1 class="mbr-section-title mbr-fonts-style align-left display-2"><br>Looking for free&nbsp;<span class="colored-text">Images</span>&nbsp;to use in your project?</h1>
+                    <h1 class="mbr-section-title mbr-fonts-style align-left display-2">Looking for free&nbsp;<span class="colored-text">Images</span>&nbsp;to use in your project?</h1>
                     <p class="mbr-text mbr-fonts-style align-left display-7">Images provided by IoT Vlogs are available to download in the Wikimedia Commons repository.</p>
                     <div class="mbr-section-btn"><a class="btn btn-primary display-7" href="https://iotvlogs.github.io/"><span class="mobi-mbri mobi-mbri-camera mbr-iconfont mbr-iconfont-btn"></span>Get Free Images</a></div>
                 </div>
@@ -275,12 +275,12 @@
                 <div class="navbar-brand">
                     <span class="navbar-logo">
                         <a href="index.html">
-                            <img src="assets/images/iv-logo-word-screen-shot-2023-02-05-at-3.37.42-pm-128x128-2.webp" alt="Mobirise" style="height: 5.9rem;">
+                            <img src="assets/images/iv-logo-word-screen-shot-2023-02-05-at-3.37.42-pm-128x128-2.webp" alt="Mobirise" style="height: 4.7rem;">
                         </a>
                     </span>
-                    <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-5" href="index.html">IoT Vlogs</a></span>
+                    <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-1" href="index.html">IoT Vlogs</a></span>
                 </div>
-                <p class="brand-text mbr-fonts-style display-7">
+                <p class="brand-text mbr-fonts-style display-5">
                     IoT Vlogs is working on creating intuitive tutorials on embedded systems and IoT infrastructure. Stay tuned and follow us on social media to get the latest information on our current and upcoming projects.</p>
                 <div class="social-row display-7">
                     <div class="soc-item">
@@ -306,14 +306,14 @@
                 </div>
             </div>
             <div class="col-12 col-lg-2 col-sm-4 ms-auto col-link1 col-link">
-                <h5 class="mbr-section-subtitle mbr-fonts-style display-4"><strong>LINKS</strong></h5>
+                <h5 class="mbr-section-subtitle mbr-fonts-style display-1"><strong>LINKS</strong></h5>
                 <ul class="list mbr-fonts-style display-7">
                     <li class="mbr-text item-wrap"><a href="index.html#top" class="text-black text-primary" style="font-size: 1.125rem; display: inline !important;">Top of the Page</a></li>
-                    <li class="mbr-text item-wrap"><a href="#" class="text-black"></a><a href="index.html" class="text-black" style="font-size: 1.125rem; display: inline !important;">Homepage</a></li><li class="mbr-text item-wrap"><a href="#" class="text-black"></a><a href="index.html" class="text-black" style="font-size: 1.125rem; display: inline !important;"></a><a href="about_us.html" class="text-black text-primary" style="font-size: 1.125rem; display: inline !important;">About Us</a><br></li><li class="mbr-text item-wrap"><a href="#" class="text-black"></a><a href="index.html" class="text-black" style="font-size: 1.125rem; display: inline !important;"></a><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;">Service</a><br></li><li class="mbr-text item-wrap"><a href="#" class="text-black"></a><a href="index.html" class="text-black" style="font-size: 1.125rem; display: inline !important;"></a><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;">Blog</a><br></li><li class="mbr-text item-wrap"><br></li>
+                    <li class="mbr-text item-wrap"><a href="#" class="text-black"></a><a href="index.html" class="text-black" style="font-size: 1.125rem; display: inline !important;">Homepage</a></li><li class="mbr-text item-wrap"><a href="#" class="text-black"></a><a href="index.html" class="text-black" style="font-size: 1.125rem; display: inline !important;"></a><a href="about_us.html" class="text-black text-primary" style="font-size: 1.125rem; display: inline !important;">About Us</a><br></li><li class="mbr-text item-wrap"><a href="#" class="text-black"></a><a href="index.html" class="text-black" style="font-size: 1.125rem; display: inline !important;"></a><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;">Services</a></li><li class="mbr-text item-wrap"><a href="#" class="text-black"><br></a><br></li><li class="mbr-text item-wrap"><br></li>
                 </ul>
             </div>
             <div class="col-12 col-lg-3 col-sm-4 col-link2 col-link">
-                <h5 class="mbr-section-subtitle mbr-fonts-style display-4">
+                <h5 class="mbr-section-subtitle mbr-fonts-style display-1">
                     <strong>PORTALS</strong></h5>
                 <ul class="list mbr-fonts-style display-7">
                     <li class="mbr-text item-wrap"><a href="index.html" class="text-black text-primary" target="_blank" style="font-size: 1.125rem; display: inline !important;">YouTube Channel</a></li>
@@ -322,10 +322,10 @@
                 </ul>
             </div>
             <div class="col-12 col-xl-2 col-lg-3 col-sm-4 col-link3 col-link">
-                <h5 class="mbr-section-subtitle mbr-fonts-style display-4">
+                <h5 class="mbr-section-subtitle mbr-fonts-style display-1">
                     <strong>LEGAL</strong></h5>
                 <ul class="list mbr-fonts-style display-7">
-                    <li class="mbr-text item-wrap"><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;">Terms of use</a></li><li class="mbr-text item-wrap"><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;"></a><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;">Terms &amp; conditions</a></li><li class="mbr-text item-wrap"><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;"></a><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;">Privacy policy</a></li><li class="mbr-text item-wrap"><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;"></a><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;">Cookie policy</a></li>
+                    <li class="mbr-text item-wrap"><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;">Terms &amp; conditions</a></li><li class="mbr-text item-wrap"><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;"></a><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;">Copyright Notice</a></li><li class="mbr-text item-wrap"><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;"></a><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;">Privacy policy</a></li><li class="mbr-text item-wrap"><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;"></a><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;">Cookie policy</a></li>
                 </ul>
             </div>
             <div class="col-12 col-copyright">
