--- a/test_page.html
+++ b/test_page.html
@@ -105,9 +105,9 @@
                             <img src="assets/images/iv-logo-word-screen-shot-2023-02-05-at-3.37.42-pm-128x128-2.webp" alt="Mobirise" style="height: 5.9rem;">
                         </a>
                     </span>
-                    <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-5" href="index.html">IoT Vlogs</a></span>
+                    <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-1" href="index.html">IoT Vlogs</a></span>
                 </div>
-                <p class="brand-text mbr-fonts-style display-7">
+                <p class="brand-text mbr-fonts-style display-5">
                     IoT Vlogs is working on creating intuitive tutorials on embedded systems and IoT infrastructure. Stay tuned and follow us on social media to get the latest information on our current and upcoming projects.</p>
                 <div class="social-row display-7">
                     <div class="soc-item">
@@ -133,14 +133,14 @@
                 </div>
             </div>
             <div class="col-12 col-lg-2 col-sm-4 ms-auto col-link1 col-link">
-                <h5 class="mbr-section-subtitle mbr-fonts-style display-4"><strong>LINKS</strong></h5>
+                <h5 class="mbr-section-subtitle mbr-fonts-style display-1"><strong>LINKS</strong></h5>
                 <ul class="list mbr-fonts-style display-7">
                     <li class="mbr-text item-wrap"><a href="index.html#top" class="text-black text-primary" style="font-size: 1.125rem; display: inline !important;">Top of the Page</a></li>
-                    <li class="mbr-text item-wrap"><a href="#" class="text-black"></a><a href="index.html" class="text-black" style="font-size: 1.125rem; display: inline !important;">Homepage</a></li><li class="mbr-text item-wrap"><a href="#" class="text-black"></a><a href="index.html" class="text-black" style="font-size: 1.125rem; display: inline !important;"></a><a href="about_us.html" class="text-black text-primary" style="font-size: 1.125rem; display: inline !important;">About Us</a><br></li><li class="mbr-text item-wrap"><a href="#" class="text-black"></a><a href="index.html" class="text-black" style="font-size: 1.125rem; display: inline !important;"></a><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;">Service</a><br></li><li class="mbr-text item-wrap"><a href="#" class="text-black"></a><a href="index.html" class="text-black" style="font-size: 1.125rem; display: inline !important;"></a><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;">Blog</a><br></li><li class="mbr-text item-wrap"><br></li>
+                    <li class="mbr-text item-wrap"><a href="#" class="text-black"></a><a href="index.html" class="text-black" style="font-size: 1.125rem; display: inline !important;">Homepage</a></li><li class="mbr-text item-wrap"><a href="#" class="text-black"></a><a href="index.html" class="text-black" style="font-size: 1.125rem; display: inline !important;"></a><a href="about_us.html" class="text-black text-primary" style="font-size: 1.125rem; display: inline !important;">About Us</a><br></li><li class="mbr-text item-wrap"><a href="#" class="text-black"></a><a href="index.html" class="text-black" style="font-size: 1.125rem; display: inline !important;"></a><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;">Services</a></li><li class="mbr-text item-wrap"><a href="#" class="text-black"><br></a><br></li><li class="mbr-text item-wrap"><br></li>
                 </ul>
             </div>
             <div class="col-12 col-lg-3 col-sm-4 col-link2 col-link">
-                <h5 class="mbr-section-subtitle mbr-fonts-style display-4">
+                <h5 class="mbr-section-subtitle mbr-fonts-style display-1">
                     <strong>PORTALS</strong></h5>
                 <ul class="list mbr-fonts-style display-7">
                     <li class="mbr-text item-wrap"><a href="index.html" class="text-black text-primary" target="_blank" style="font-size: 1.125rem; display: inline !important;">YouTube Channel</a></li>
@@ -149,10 +149,10 @@
                 </ul>
             </div>
             <div class="col-12 col-xl-2 col-lg-3 col-sm-4 col-link3 col-link">
-                <h5 class="mbr-section-subtitle mbr-fonts-style display-4">
+                <h5 class="mbr-section-subtitle mbr-fonts-style display-1">
                     <strong>LEGAL</strong></h5>
                 <ul class="list mbr-fonts-style display-7">
-                    <li class="mbr-text item-wrap"><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;">Terms of use</a></li><li class="mbr-text item-wrap"><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;"></a><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;">Terms &amp; conditions</a></li><li class="mbr-text item-wrap"><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;"></a><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;">Privacy policy</a></li><li class="mbr-text item-wrap"><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;"></a><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;">Cookie policy</a></li>
+                    <li class="mbr-text item-wrap"><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;">Terms &amp; conditions</a></li><li class="mbr-text item-wrap"><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;"></a><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;">Copyright Notice</a></li><li class="mbr-text item-wrap"><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;"></a><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;">Privacy policy</a></li><li class="mbr-text item-wrap"><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;"></a><a href="#" class="text-black" style="font-size: 1.125rem; display: inline !important;">Cookie policy</a></li>
                 </ul>
             </div>
             <div class="col-12 col-copyright">
